--- a/overflow.html
+++ b/overflow.html
@@ -32,6 +32,14 @@
             overflow: hidden;
             text-overflow: ellipsis;
         }
+
+        .container {
+            display: inline-block;
+            border: 2px solid blueviolet;
+            min-width: 400px;
+            max-width: 800px;
+            min-height: 200px;
+        }
     </style>
 </head>
 
@@ -88,6 +96,15 @@
         sed delectus nemo atque possimus hic veritatis excepturi provident beatae numquam? Facilis deleniti, nesciunt ut
         doloribus pariatur quis eligendi quod blanditiis quos sapiente quo optio totam molestiae labore nisi voluptatem
         beatae exercitationem rem in eos, dolorum saepe ducimus eaque doloremque? Labore, nostrum.
+    </div>
+    <div class="container">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas maiores inventore sapiente nemo rem, obcaecati et
+        tempora, animi quibusdam, corrupti dolorum. Quidem sunt neque non ea, autem maiores distinctio incidunt.
+    </div>
+    <div>
+        <!-- <span class="container">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, inventore!
+        </span> -->
     </div>
 </body>
 
